_generated-doc/2.13/config/quarkus-jacoco.adoc

:summaryTableId: quarkus-jacoco
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-jacoco_configuration]]link:#quarkus-jacoco_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.data-file]]`link:#quarkus-jacoco_quarkus.jacoco.data-file[quarkus.jacoco.data-file]`

[.description]
--
The jacoco data file

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_DATA_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_DATA_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`jacoco-quarkus.exec`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.reuse-data-file]]`link:#quarkus-jacoco_quarkus.jacoco.reuse-data-file[quarkus.jacoco.reuse-data-file]`

[.description]
--
Whether to reuse (`true`) or delete (`false`) the jacoco data file on each run.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_REUSE_DATA_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_REUSE_DATA_FILE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.report]]`link:#quarkus-jacoco_quarkus.jacoco.report[quarkus.jacoco.report]`

[.description]
--
If Quarkus should generate the Jacoco report

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_REPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_REPORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.output-encoding]]`link:#quarkus-jacoco_quarkus.jacoco.output-encoding[quarkus.jacoco.output-encoding]`

[.description]
--
Encoding of the generated reports.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_OUTPUT_ENCODING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_OUTPUT_ENCODING+++`
endif::add-copy-button-to-env-var[]
--|string 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.title]]`link:#quarkus-jacoco_quarkus.jacoco.title[quarkus.jacoco.title]`

[.description]
--
Name of the root node HTML report pages.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_TITLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_TITLE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.footer]]`link:#quarkus-jacoco_quarkus.jacoco.footer[quarkus.jacoco.footer]`

[.description]
--
Footer text used in HTML report pages.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_FOOTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_FOOTER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.source-encoding]]`link:#quarkus-jacoco_quarkus.jacoco.source-encoding[quarkus.jacoco.source-encoding]`

[.description]
--
Encoding of the source files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_SOURCE_ENCODING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_SOURCE_ENCODING+++`
endif::add-copy-button-to-env-var[]
--|string 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.includes]]`link:#quarkus-jacoco_quarkus.jacoco.includes[quarkus.jacoco.includes]`

[.description]
--
A list of class files to include in the report. May use wildcard characters (++*++ and ?). When not specified everything will be included. 
For instance:  
 - `++**++/fo/++**++/++*++` targets all classes under fo and sub packages 
 - `++**++/bar/++*++` targets all classes directly under bar 
 - `++**++/++*++BAR++*++.class` targets classes that contain BAR in their name regardless of path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_INCLUDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_INCLUDES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`**`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.excludes]]`link:#quarkus-jacoco_quarkus.jacoco.excludes[quarkus.jacoco.excludes]`

[.description]
--
A list of class files to exclude from the report. May use wildcard characters (++*++ and ?). When not specified nothing will be excluded. 
For instance:  
 - `++**++/fo/++**++/++*++` targets all classes under fo and sub packages 
 - `++**++/bar/++*++` targets all classes directly under bar 
 - `++**++/++*++BAR++*++.class` targets classes that contain BAR in their name regardless of path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_EXCLUDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_EXCLUDES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.report-location]]`link:#quarkus-jacoco_quarkus.jacoco.report-location[quarkus.jacoco.report-location]`

[.description]
--
The location of the report files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_REPORT_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_REPORT_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`jacoco-report`

|===