_generated-doc/3.34/config/quarkus-jacoco.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-enabled]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-enabled[`+++quarkus.jacoco.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether or not the Jacoco extension is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-data-file]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-data-file[`+++quarkus.jacoco.data-file+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.data-file+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The Jacoco data file. The path can be relative (to the project/module root) or absolute.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_DATA_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_DATA_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++target/jacoco-quarkus.exec+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-reuse-data-file]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-reuse-data-file[`+++quarkus.jacoco.reuse-data-file+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.reuse-data-file+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to reuse (`true`) or delete (`false`) the Jacoco data file on each run.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_REUSE_DATA_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_REUSE_DATA_FILE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-report]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-report[`+++quarkus.jacoco.report+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.report+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If Quarkus should generate the Jacoco report


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_REPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_REPORT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-output-encoding]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-output-encoding[`+++quarkus.jacoco.output-encoding+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.output-encoding+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Encoding of the generated reports.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_OUTPUT_ENCODING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_OUTPUT_ENCODING+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++UTF-8+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-title]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-title[`+++quarkus.jacoco.title+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.title+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Name of the root node HTML report pages.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_TITLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_TITLE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++${quarkus.application.name}+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-footer]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-footer[`+++quarkus.jacoco.footer+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.footer+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Footer text used in HTML report pages.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_FOOTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_FOOTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-source-encoding]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-source-encoding[`+++quarkus.jacoco.source-encoding+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.source-encoding+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Encoding of the source files.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_SOURCE_ENCODING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_SOURCE_ENCODING+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++UTF-8+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-includes]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-includes[`+++quarkus.jacoco.includes+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.includes+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A list of class files to include in the report. May use wildcard characters (++*++ and ?). When not specified everything will be included.

For instance:

 - `++**++/fo/++**++/++*++` targets all classes under fo and sub packages
 - `++**++/bar/++*++` targets all classes directly under bar
 - `++**++/++*++BAR++*++.class` targets classes that contain BAR in their name regardless of path


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_INCLUDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_INCLUDES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`+++**+++`

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-excludes]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-excludes[`+++quarkus.jacoco.excludes+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.excludes+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A list of class files to exclude from the report. May use wildcard characters (++*++ and ?). When not specified nothing will be excluded.

For instance:

 - `++**++/fo/++**++/++*++` targets all classes under fo and sub packages
 - `++**++/bar/++*++` targets all classes directly under bar
 - `++**++/++*++BAR++*++.class` targets classes that contain BAR in their name regardless of path


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_EXCLUDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_EXCLUDES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-report-location]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-report-location[`+++quarkus.jacoco.report-location+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.report-location+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The location of the report files. The path can be relative (to the project/module root) or absolute.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_REPORT_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_REPORT_LOCATION+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++target/jacoco-report+++`

h|[[quarkus-jacoco_section_quarkus-jacoco-instrument-artifacts]] [.section-name.section-level0]##link:#quarkus-jacoco_section_quarkus-jacoco-instrument-artifacts[Artifacts that should be instrumented]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-instrument-artifacts-dependency-name-group-id]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-instrument-artifacts-dependency-name-group-id[`+++quarkus.jacoco.instrument-artifacts."dependency-name".group-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.instrument-artifacts."dependency-name".group-id+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maven groupId of the artifact.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_INSTRUMENT_ARTIFACTS__DEPENDENCY_NAME__GROUP_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_INSTRUMENT_ARTIFACTS__DEPENDENCY_NAME__GROUP_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-instrument-artifacts-dependency-name-artifact-id]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-instrument-artifacts-dependency-name-artifact-id[`+++quarkus.jacoco.instrument-artifacts."dependency-name".artifact-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.instrument-artifacts."dependency-name".artifact-id+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maven artifactId of the artifact (optional).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_INSTRUMENT_ARTIFACTS__DEPENDENCY_NAME__ARTIFACT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_INSTRUMENT_ARTIFACTS__DEPENDENCY_NAME__ARTIFACT_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-instrument-artifacts-dependency-name-classifier]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-instrument-artifacts-dependency-name-classifier[`+++quarkus.jacoco.instrument-artifacts."dependency-name".classifier+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.instrument-artifacts."dependency-name".classifier+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maven classifier of the artifact (optional).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_INSTRUMENT_ARTIFACTS__DEPENDENCY_NAME__CLASSIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_INSTRUMENT_ARTIFACTS__DEPENDENCY_NAME__CLASSIFIER+++`
endif::add-copy-button-to-env-var[]
--
|string
|


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus-jacoco-aggregate-report-data]] [.property-path]##link:#quarkus-jacoco_quarkus-jacoco-aggregate-report-data[`+++quarkus.jacoco.aggregate-report-data+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jacoco.aggregate-report-data+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If set to `true` then the report data (source directories and class files) are aggregated so that a single report can be generated.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACOCO_AGGREGATE_REPORT_DATA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACOCO_AGGREGATE_REPORT_DATA+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

|===

